--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,8 +28,7 @@
 </tbody>
 </table>
 
-
-<%= form_for [@booked, @book_comment] do |f| %>
+<%= form_with model: [@booked, @book_comment] do |f| %>
     <div class="row">
         <div class="col-sm-12">
             <%= f.text_area :comment, rows:'5', class: "form-control" %>
@@ -37,6 +36,7 @@
     </div>
     <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
 <% end %>
+
 <div class="col-sm-12">
 	<table class="table">
 		<tbody>
