--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,32 +38,8 @@
 <% end %>
 
 <div class="col-sm-12">
-	<table class="table">
-		<tbody>
-			<tr>
-			  <% @book_comments.each do |book_comment| %>
-			  <td>
-                 <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback:"no_image2.jpg" %>
-             </td>
-             <td>
-             	<%= book_comment.user.name %>
-             </td>
-             <td>
-                <%= book_comment.created_at.strftime('%Y/%m/%d') %>
-            </td>
-            <td>
-                <%= book_comment.comment %>
-            </td>
-            <td>
-                <% if book_comment.user_id == current_user.id %>
-            </td>
-            <td>
-                <%= link_to "削除", book_book_comments_path(book_comment), method: :delete, data: {confirm:'削除してもよろしいですか？'} %>
-            </td>
-            </tr>
-                <% end %>
-               <% end %>
-       </tbody>
+	<table class="table book_comments_table">
+			 <%= render 'book_comments/book_comment', book_comments: @booked.book_comments %>
    </table>
 </div>
 </div>
