--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,12 +1,12 @@
 <% if user_signed_in? %>
 	<% if book.favorited_by?(current_user) %>
 	   <%= link_to book_favorites_path(book.id), method: :delete, remote: true do %>
-	     <%= fa_icon "fa fa-heart" %>
+	     <%= fa_icon "heart" %>
 	     <%= book.favorites.count %>
 	   <% end %>
 	<% else %>
 	   <%= link_to book_favorites_path(book.id), method: :post, remote: true do %>
-	     <%= fa_icon "fa fa-heart" %>
+	     <%= fa_icon "heart-o" %>
 	     <%= book.favorites.count %>
 	   <% end %>
 	<% end %>
