--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,4 +1,4 @@
 $("textarea").val("");
 // textareaセレクタを.val("")空白にするよ！
-$(".book_comment_table").html("<%= j(render 'book_comments/book_comment', book_comments: @book_comments ) %>");
-// book_comment_tableを.htmlに置き換えるよ！書き換えるよ！
+$(".book_comments_table").html("<%= j(render 'book_comments/book_comment', book_comments: @book_comments ) %>");
+// book_comments_tableを.htmlに置き換えるよ！書き換えるよ！
